fixed so much horrible spacing

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -32,7 +32,7 @@ ul {
 
 #navigator {
 	text-align:center;
-	margin-bottom:10px;
+	margin-bottom:20px;
 }
 #resumeHeader {
 	margin: 0;
@@ -78,5 +78,13 @@ li {
 
 .spacing {
 	width: 20%;
-	min-width: 250px;
+	min-width: 230px;
+}
+
+.col-md-3 {
+	padding-left:0px;
+}
+
+.col-md-9 {
+	padding-left:0px;
 }
